<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="aldian_reza">Aldian_Reza</string>
    <string name="aldian_gmail.com">aldianreza46@gmail.com</string>
    <string name="profile">Profile</string>
    <string name="riwayat">Riwayat Pendidikan</string>
    <string name="pengalaman">Pengalaman Bekerja</string>
    <string name="menu_chart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>